# minibase

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  README_ZH.md  sonar-project.properties
.github/workflows/: build.yml  sonar.yml
include/example/: actor.h  cpp_string.h  db_storage.h  hooks.h  level.h  logger.h  network.h
include/example/nbs/: megalovania.h  nyancat.h  比翼の羽根.h
include/hook_api/: hook.h
include/hooker/: hashmap.h  hook.h  hook_api.h  hooks.h
include/hooker/hook_api/: hook.h
include/lightbase/: file_utils.h  lightbase.h  loader.h
include/lightbase/hijack/: hijack.h
include/linux/lightbase/: cache.h  hook.h  lightbase.h  symbol.h
include/littlehooker/: littlehooker.h
include/universal/lightbase/: cache.h  hook.h  lightbase.h  symbol.h
include/win/lightbase/: file_utils.h  hashmap.h  lightbase.h  loader.h
include/win/lightbase/hijack/: hijack.h
lib/: minhook.x64d.lib
src/: actor.c  cpp_string.c  db_stroage.c  dllmain.c  file_utils.c  hashmap.c  hook_api.c  hooks.c  level.c  lightbase.c  littlehooker.c  loader.c  logger.c  network.c
src/hijack/: hijack.c
src/hook_api/: hook.c
src/hooker/: hashmap.c  hook.c
src/linux/: cache.c  hook.c  lightbase.c  symbol.c
src/linux/lightbase/: cache.c  hook.c  lightbase.c  symbol.c
src/win/: file_utils.c  hashmap.c  lightbase.c  loader.c
src/win/hijack/: hijack.c
src/win/lightbase/: cache.c  hook.c  lightbase.c  logger.c  symbol.c
tools/: nbs2header.py  symchk.py
